--- a/web/css/style.css
+++ b/web/css/style.css
@@ -7,3 +7,10 @@
   border-color: #007bff;
   background-color: rgba(0, 123, 255, 0.1);
 }
+
+#map {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+}
