--- a/web/css/style.css
+++ b/web/css/style.css
@@ -8,9 +8,14 @@
   background-color: rgba(0, 123, 255, 0.1);
 }
 
+body {
+  height: 100vh;
+  margin: 0;
+  border: 0;
+  overflow: hidden;
+}
+
 #map {
-  position: absolute;
-  top: 0;
-  bottom: 0;
   width: 100%;
+  height: 100%;
 }
